--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,87 +7,93 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   
+  
     <ImageView
         android:id="@+id/iv_banner"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/img_main_banner"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
+        android:src="@drawable/img_main_banner"
+        android:contentDescription="Campus banner"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.4"/>
 
-    
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/tv_title"
-        android:textSize="40sp"
+        android:textSize="32sp" 
         android:textStyle="bold"
         android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@id/iv_banner"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-       
+  
         <ImageButton
             android:id="@+id/btn_facilities"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_weight="1"
+            android:layout_margin="8dp"
             android:src="@drawable/img_btn_facilities"
-            android:scaleType="fitCenter"
-            android:background="@drawable/button_selector"
-            android:layout_margin="16dp"/>
+            android:scaleType="fitInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Facilities"/>
 
     
         <ImageButton
             android:id="@+id/btn_events"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_weight="1"
+            android:layout_margin="8dp"
             android:src="@drawable/img_btn_events"
-            android:scaleType="fitCenter"
-            android:background="@drawable/button_selector"
-            android:layout_margin="16dp"/>
+            android:scaleType="fitInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Events"/>
 
-        
         <ImageButton
             android:id="@+id/btn_clubs"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_weight="1"
+            android:layout_margin="8dp"
             android:src="@drawable/img_btn_clubs"
-            android:scaleType="fitCenter"
-            android:background="@drawable/button_selector"
-            android:layout_margin="16dp"/>
+            android:scaleType="fitInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Clubs"/>
 
-       
         <ImageButton
             android:id="@+id/btn_support"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_weight="1"
+            android:layout_margin="8dp"
             android:src="@drawable/img_btn_support"
-            android:scaleType="fitCenter"
-            android:background="@drawable/button_selector"
-            android:layout_margin="16dp"/>
+            android:scaleType="fitInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Support"/>
 
     </LinearLayout>
 
