--- a/res/drawable/button_selector.xml
+++ b/res/drawable/button_selector.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:color="@color/light_green"/>
-    <item android:color="@color/green"/>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/light_green"/>
+            <corners android:radius="8dp"/> 
+            <padding android:top="4dp" android:bottom="4dp"/>
+            <stroke android:width="2dp" android:color="@color/green"/> 
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/green"/>
+            <corners android:radius="8dp"/>
+            <padding android:top="4dp" android:bottom="4dp"/>
+        </shape>
+    </item>
 </selector>
