--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -13,12 +13,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
-    android:src="@drawable/img_main_banner"
-    android:contentDescription="Campus banner"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHeight_percent="0.3"/>
+        android:src="@drawable/img_main_banner"
+        android:contentDescription="Campus banner"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.4"/>
 
 
     <TextView
@@ -26,7 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/tv_title"
-    android:textSize="40sp"
+        android:textSize="32sp"
     android:textStyle="bold"
     android:gravity="center"
     android:layout_marginTop="16dp"
@@ -36,76 +36,68 @@
     app:layout_constraintEnd_toEndOf="parent"/>
 
 
-    <GridLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:rowCount="2"
-        android:alignmentMode="alignMargins"
-    android:columnOrderPreserved="false"
-    android:layout_margin="16dp"
-    app:layout_constraintTop_toBottomOf="@id/tv_title"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintVertical_bias="0.0">
+        android:orientation="horizontal"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
 
-    <ImageButton
-        android:id="@+id/btn_facilities"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-    android:layout_columnWeight="1"
-    android:layout_rowWeight="1"
-    android:layout_margin="8dp"
-    android:src="@drawable/img_btn_facilities"
-    android:scaleType="centerInside"
-    android:backgroundTint="@drawable/button_selector"
-    android:onClick="onButtonClick"
-    android:contentDescription="Facilities"/>
-
-
-    <ImageButton
-        android:id="@+id/btn_events"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
+        <ImageButton
+            android:id="@+id/btn_facilities"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"
         android:layout_margin="8dp"
-        android:src="@drawable/img_btn_events"
+        android:src="@drawable/img_btn_facilities"
         android:scaleType="centerInside"
         android:backgroundTint="@drawable/button_selector"
         android:onClick="onButtonClick"
-        android:contentDescription="Events"/>
-
-    <!-- 社团按钮 -->
-    <ImageButton
-        android:id="@+id/btn_clubs"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
-        android:layout_margin="8dp"
-        android:src="@drawable/img_btn_clubs"
-        android:scaleType="centerInside"
-        android:backgroundTint="@drawable/button_selector"
-        android:onClick="onButtonClick"
-        android:contentDescription="Clubs"/>
+        android:contentDescription="Facilities"/>
 
 
-    <ImageButton
-        android:id="@+id/btn_support"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
-        android:layout_margin="8dp"
-        android:src="@drawable/img_btn_support"
-        android:scaleType="centerInside"
-        android:backgroundTint="@drawable/button_selector"
-        android:onClick="onButtonClick"
-        android:contentDescription="Support"/>
+        <ImageButton
+            android:id="@+id/btn_events"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_events"
+            android:scaleType="centerInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Events"/>
 
-</GridLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageButton
+            android:id="@+id/btn_clubs"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_clubs"
+            android:scaleType="centerInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Clubs"/>
+
+
+        <ImageButton
+            android:id="@+id/btn_support"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_weight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_support"
+            android:scaleType="centerInside"
+            android:backgroundTint="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Support"/>
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
