--- a/res/layout/activity_detail.xml
+++ b/res/layout/activity_detail.xml
@@ -5,18 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".DetailActivity">
+
 
     <ImageView
         android:id="@+id/iv_detail_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-    android:scaleType="centerCrop"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHeight_percent="0.3"
-    tools:src="@drawable/img_btn_facilities"/>
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
+        tools:src="@drawable/img_btn_facilities"
+        android:contentDescription="Detail image"/>
+
 
     <TextView
         android:id="@+id/tv_detail_title"
@@ -24,12 +28,14 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_detail_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="Title"/>
+        android:textColor="@color/green_dark"
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginTop="16dp"
+    app:layout_constraintTop_toBottomOf="@id/iv_detail_image"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    tools:text="Title"/>
+
 
     <ScrollView
         android:layout_width="0dp"
@@ -40,13 +46,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
+
         <TextView
             android:id="@+id/tv_detail_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
-            android:padding="8dp"
-        tools:text="Content..."/>
+            android:textColor="@color/black"
+            android:lineSpacingExtra="8dp"
+            android:padding="4dp"
+            tools:text="Content..."/>
 
     </ScrollView>
 
