--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_200"
     tools:context=".MainActivity">
 
 
@@ -13,12 +14,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
-    android:src="@drawable/img_main_banner"
-    android:contentDescription="Campus banner"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHeight_percent="0.3"/>
+        android:src="@drawable/img_main_banner"
+        android:contentDescription="Campus banner"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"/>
 
 
     <TextView
@@ -26,14 +27,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/tv_title"
-    android:textSize="40sp"
-    android:textStyle="bold"
-    android:gravity="center"
-    android:layout_marginTop="16dp"
-    android:layout_marginHorizontal="16dp"
-    app:layout_constraintTop_toBottomOf="@id/iv_banner"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_banner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
     <GridLayout
@@ -42,70 +44,67 @@
         android:columnCount="2"
         android:rowCount="2"
         android:alignmentMode="alignMargins"
-    android:columnOrderPreserved="false"
-    android:layout_margin="16dp"
-    app:layout_constraintTop_toBottomOf="@id/tv_title"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintVertical_bias="0.0">
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
 
-    <ImageButton
-        android:id="@+id/btn_facilities"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-    android:layout_columnWeight="1"
-    android:layout_rowWeight="1"
-    android:layout_margin="8dp"
-    android:src="@drawable/img_btn_facilities"
-    android:scaleType="centerInside"
-    android:backgroundTint="@drawable/button_selector"
-    android:onClick="onButtonClick"
-    android:contentDescription="Facilities"/>
-
-
-    <ImageButton
-        android:id="@+id/btn_events"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
-        android:layout_margin="8dp"
-        android:src="@drawable/img_btn_events"
-        android:scaleType="centerInside"
-        android:backgroundTint="@drawable/button_selector"
+        <ImageButton
+            android:id="@+id/btn_facilities"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_facilities"
+            android:scaleType="centerInside"
+            android:background="@drawable/button_selector"
         android:onClick="onButtonClick"
-        android:contentDescription="Events"/>
+        android:contentDescription="Facilities"/>
 
-    <!-- 社团按钮 -->
-    <ImageButton
-        android:id="@+id/btn_clubs"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
-        android:layout_margin="8dp"
-        android:src="@drawable/img_btn_clubs"
-        android:scaleType="centerInside"
-        android:backgroundTint="@drawable/button_selector"
-        android:onClick="onButtonClick"
-        android:contentDescription="Clubs"/>
+        <!-- 活动按钮 -->
+        <ImageButton
+            android:id="@+id/btn_events"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_events"
+            android:scaleType="centerInside"
+            android:background="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Events"/>
 
 
-    <ImageButton
-        android:id="@+id/btn_support"
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:layout_columnWeight="1"
-        android:layout_rowWeight="1"
-        android:layout_margin="8dp"
-        android:src="@drawable/img_btn_support"
-        android:scaleType="centerInside"
-        android:backgroundTint="@drawable/button_selector"
-        android:onClick="onButtonClick"
-        android:contentDescription="Support"/>
+        <ImageButton
+            android:id="@+id/btn_clubs"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_clubs"
+            android:scaleType="centerInside"
+            android:background="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Clubs"/>
 
-</GridLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageButton
+            android:id="@+id/btn_support"
+            android:layout_width="0dp"
+            android:layout_height="120dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_support"
+            android:scaleType="centerInside"
+            android:background="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Support"/>
+
+    </GridLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
