--- a/res/drawable/button_selector.xml
+++ b/res/drawable/button_selector.xml
@@ -3,18 +3,18 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_green"/>
-            <corners android:radius="8dp"/>
-            <padding android:top="4dp" android:bottom="4dp"/>
-            <stroke android:width="2dp" android:color="@color/green"/>
+            <solid android:color="@color/green_light"/>
+            <corners android:radius="12dp"/>
+            <stroke android:width="2dp" android:color="@color/green_dark"/>
+            <padding android:top="8dp" android:bottom="8dp"/>
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/green"/>
-            <corners android:radius="8dp"/>
-            <padding android:top="4dp" android:bottom="4dp"/>
+            <solid android:color="@color/green_dark"/>
+            <corners android:radius="12dp"/>
+            <padding android:top="8dp" android:bottom="8dp"/>
         </shape>
     </item>
 </selector>
