--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_200"
     tools:context=".MainActivity">
 
 
@@ -27,13 +28,14 @@
         android:layout_height="wrap_content"
         android:text="@string/tv_title"
         android:textSize="32sp"
-    android:textStyle="bold"
-    android:gravity="center"
-    android:layout_marginTop="16dp"
-    android:layout_marginHorizontal="16dp"
-    app:layout_constraintTop_toBottomOf="@id/iv_banner"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_banner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
     <LinearLayout
@@ -43,8 +45,7 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
 
         <ImageButton
@@ -52,12 +53,12 @@
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
-        android:layout_margin="8dp"
-        android:src="@drawable/img_btn_facilities"
-        android:scaleType="centerInside"
-        android:backgroundTint="@drawable/button_selector"
-        android:onClick="onButtonClick"
-        android:contentDescription="Facilities"/>
+            android:layout_margin="8dp"
+            android:src="@drawable/img_btn_facilities"
+            android:scaleType="centerInside"
+            android:background="@drawable/button_selector"
+            android:onClick="onButtonClick"
+            android:contentDescription="Facilities"/>
 
 
         <ImageButton
@@ -68,7 +69,7 @@
             android:layout_margin="8dp"
             android:src="@drawable/img_btn_events"
             android:scaleType="centerInside"
-            android:backgroundTint="@drawable/button_selector"
+            android:background="@drawable/button_selector"
             android:onClick="onButtonClick"
             android:contentDescription="Events"/>
 
@@ -81,7 +82,7 @@
             android:layout_margin="8dp"
             android:src="@drawable/img_btn_clubs"
             android:scaleType="centerInside"
-            android:backgroundTint="@drawable/button_selector"
+            android:background="@drawable/button_selector"
             android:onClick="onButtonClick"
             android:contentDescription="Clubs"/>
 
@@ -94,7 +95,7 @@
             android:layout_margin="8dp"
             android:src="@drawable/img_btn_support"
             android:scaleType="centerInside"
-            android:backgroundTint="@drawable/button_selector"
+            android:background="@drawable/button_selector"
             android:onClick="onButtonClick"
             android:contentDescription="Support"/>
 
